--- a/index.html
+++ b/index.html
@@ -1,23 +1,81 @@
 <!DOCTYPE html>
-<!-- ICS2O-UnitX-YY-HTML -->
+<!-- ICS2O-Unit3-01-HTML -->
 <html lang="en-ca">
-  <head>
-    <meta charset="utf-8">
-    <meta name="description" content="XXX">
-    <meta name="keywords" content="mths, ics2o">
-    <meta name="author" content="Venika Sem">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/iconMy first webpage, with JavaScript?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-    <title>XXX</title>
+    <head>
+    <meta charset="utf-8" />
+    <meta name="description" content="Area of Trapezoid, with JavaScript" />
+    <meta name="keywords" content="mths, ics2o" />
+    <meta name="author" content="Venika Sem" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+    <link rel="manifest" href="site.webmanifest" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-purple.min.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Area of Trapezoid, with JavaScript</title>
   </head>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-
+    <script src="./js/script.js"></script>
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+      <header class="mdl-layout__header">
+        <div class="mdl-layout__header-row">
+          <span class="mdl-layout-title">Area of Trapezoid, with JS</span>
+        </div>
+      </header>
+      <main class="mdl-layout__content">
+        <table>
+          <tr>
+            <th>
+              <img src="img/trapezoid-png.png" alt="trapezoid" width="65%" height="auto" />
+            </th>
+            <th>
+              <h2>Formula</h2>
+              <h3>A = [(a + b)/ 2] x h</h3>
+            </th>
+          </tr>
+        </table>
+        <!-- Numeric Textfield -->
+        <form action="#">
+          <p>a Base</p>
+          <div class="mdl-textfield mdl-js-textfield">
+            <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="a-base-of-trapezoid"/>
+            <label class="mdl-textfield__label" for="base-of-trapezoid">enter here ...</label>
+            <span class="mdl-textfield__error">Input is not a number!</span>
+          </div>
+        </form>
+        <!-- Numeric Textfield -->
+        <form action="#">
+          <p>b Base</p>
+          <div class="mdl-textfield mdl-js-textfield">
+            <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="b-base-of-trapezoid"/>
+            <label class="mdl-textfield__label" for="b-base-of-trapezoid">enter here ...</label>
+            <span class="mdl-textfield__error">Input is not a number!</span>
+          </div>
+        </form>
+        <!-- Numeric Textfield -->
+        <form action="#">
+          <p>Height</p>
+          <div class="mdl-textfield mdl-js-textfield">
+            <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="height-of-trapezoid"/>
+            <label class="mdl-textfield__label" for="height-of-trapezoid">enter here ...</label>
+            <span class="mdl-textfield__error">Input is not a number!</span>
+          </div>
+        </form>
+        <!-- Raised button with ripple -->
+        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" 
+onclick="calculate()">
+          CALCULATE AREA
+        </button>
+        <br />
+        <p>
+          <div id="answers">
+            <div id="area"></div>
+          </div>
+        </p>
+      </main>
+    </div>
   </body>
 </html>
-        
